# CarTouchscreenMiniDisplay

./: README.md
CarTouchscreenMiniDisplay/: CMakeLists.txt  lv_conf_old.h  main.c
CarTouchscreenMiniDisplay/CarTouchscreenMiniDisplay/: CMakeLists.txt  CarTouchscreenMiniDisplay.cpp
CarTouchscreenMiniDisplay/CarTouchscreenMiniDisplay/AccelInterface/: AccelInterface.cpp  AccelInterface.h  CMakeLists.txt
CarTouchscreenMiniDisplay/CarTouchscreenMiniDisplay/libraries/bsp/: CMakeLists.txt  bsp_battery.h  bsp_co5300.h  bsp_dma_channel_irq.c  bsp_dma_channel_irq.h  bsp_ft6146.c  bsp_ft6146.h  bsp_i2c.c  bsp_i2c.h  bsp_pcf85063.h  bsp_qmi8658.h
CarTouchscreenMiniDisplay/CarTouchscreenMiniDisplay/lvgl_ui/: lvgl_ui.c  lvgl_ui.h
CarTouchscreenMiniDisplay/CarTouchscreenMiniDisplay/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
CarTouchscreenMiniDisplay/UI/: CMakeLists.txt  filelist.txt
CarTouchscreenMiniDisplay/UI/screens/: ui_Screen6.c
CarTouchscreenMiniDisplay/examples/src/: LCD_1in28_LVGL_test.c
CarTouchscreenMiniDisplay/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
CarTouchscreenMiniDisplay/lib/QMI8658/: QMI8658.c
CarTouchscreenMiniDisplay/lib/Touch/: CST816S.c
CarTouchscreenMiniDisplay/lib/lvgl/: CMakeLists.txt
CarTouchscreenMiniDisplay/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.h
CarTouchscreenMiniDisplay/ui/components/: ui_comp_hook.c
CarTouchscreenMiniDisplay/ui/images/: ui_img_scale_png.c
CarTouchscreenMiniDisplay/ui/screens/: ui_Inclinometer.c  ui_Screen1.c  ui_Screen3.c  ui_Screen6.c  ui_Screen7.c  ui_Slider.c  ui_Temperature.c
Designs/: Pitch.drawio  PitchBar.drawio  Scale.drawio
SquarelineProject/: CarTouchScreenMiniDisplay.sll  CarTouchScreenMiniDisplay.spj
SquarelineProject/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
SquarelineProject/assets/: ui_font_HeadingDegree.c  ui_font_HeadingDegree.fcfg  ui_font_SmallerEmblemaOne.c  ui_font_SmallerEmblemaOne.fcfg
SquarelineProject/assets/Emblema_One/: ui_font_HeadingDegree.fcfg  ui_font_SmallerEmblemaOne.c  ui_font_SmallerEmblemaOne.fcfg
SquarelineProject/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
(+29 files in other folders)
